# Bits-O-Cpp

./: LICENSE  README.md
containers/: CMakeLists.txt  README.md  main.cpp  main_hash_table.cpp  main_vector_vs_deque.cpp
defines/: tc_defines.h
demoscene/: CMakeLists.txt  README.md  main_doom_fire.cpp  main_fire.cpp  main_water.cpp
geomtry/: CMakeLists.txt  README.md  main_2D_fibo.cpp  main_3D_fibo.cpp
graphs/: graph_and_algos.h  mst_prim_cached.h
knapsack/: CMakeLists.txt  README.md  main.cpp
math/: CMakeLists.txt  README.md  math.h  tc_math.h  test_fast_exp.cpp  test_fast_intlog2.cpp
modern_cpp/: CMakeLists.txt  main.cpp
platform_info/: platform_info.h
random/: CMakeLists.txt  README.md  main.cpp  tc_random.h  tc_random_funcs.h  tc_random_funcs_ref.h  tc_random_tools.h
read&write/: ppm.h
sdl/: CMakeLists.txt  main.cpp  min_max_clamp_between.h  sdl.h
simulated_annealing/: CMakeLists.txt  simulated_annealing.h
string/: string.h
time/: CMakeLists.txt  README.md  main.cpp  main_alt.cpp  main_cpp11_chrono.cpp  tc_timer.h
